refactor to improve