@@ -7,8 +7,8 @@ import jakarta.ws.rs.Path;
 import jakarta.ws.rs.core.Response;
 import org.eclipse.microprofile.jwt.Claims;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 
 @Path(value = "api/login")
 public class LoginController {
@@ -18,7 +18,7 @@ public class LoginController {
     public Response login() {
         return Response.ok(Jwt.issuer("https://inventory.cervejaduna.pt/issuer")
                         .upn("geral@cervejaduna.pt")
-                        .groups(new HashSet<>(Arrays.asList(Role.ROLE_GENERIC)))
+                        .groups(new HashSet<>(List.of(Role.ROLE_GENERIC)))
                         .claim(Claims.given_name, "Diogo")
                         .claim(Claims.preferred_username, "dseveriano")
                         .sign()).build();
